1999-12-15  Lennart Staflin  <lennarts@infotek.no>

	* psgml.el: autoload for sgml-do-set-option

1999-12-03  Lennart Staflin  <lennarts@infotek.no>

	* psgml.el (sgml-mode-syntax-table): new variable
	(sgml-mode): use sgml-mode-syntax-table

1999-11-29  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el (sgml-validate-error-regexps): Also recognize warnings
	(:W:) in output from nsgmls.

1999-11-11  Lennart Staflin  <lennarts@infotek.no>

	* psgml-parse.el (sgml-parse-to): Let sgml-with-parser-syntax wrap
	a bigger chunk of the code to make sure the syntax table is set up
	before any buffer changes.

Tue Nov  9 16:25:53 1999  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-modify-dtd): use sgml-general-case on names
	from modifier.

Mon Nov  8 22:13:12 1999  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-info.el (sgml-eltype-refrenced-elements): Copy sequence
	before sorting destructively.
	(sgml-describe-element-type): Include exceptions in info display.

Thu Nov  4 19:07:09 1999  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-note-change-at): If in XML mode and
 	previous char is /, back up one char. This allows for the />
 	delimiter to be recognized even if the start tag has been
 	previously parsed as an improperly ended tag.

	* psgml-edit.el (sgml-last-element): don't use sgml-last-element
	for XML (there is not omitted tags to account for).

1999-10-21  Lennart Staflin  <lennarts@infotek.no>

	* psgml-parse.el (sgml-push-to-entity): restore the (erase-buffer)
	that had been commented out. This is needed for the case when 
	sgml-try-merge-compiled-dtd fails and leaves junk in the buffer.
	
1999-10-19  Lennart Staflin  <lennarts@infotek.no>
	
	* Version 1.2.1 released
	
1999-10-14  Lennart Staflin  <lennarts@infotek.no>

	* psgml-parse.el (sgml-log-entity-stack): don't use
	sgml-pop-entity, just loop thru the entity stack and print out the
	files. 
	(sgml-load-ecat): bind sgml-xml-p while parsing catalog
